remove un used feature
